# earendil-sim

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  run_docker.sh
src/earendil_bot/: package.xml  setup.cfg  setup.py
src/earendil_bot/config/: ekf.yaml  mapper_params_online_async.yaml  missions.yaml  nav2_params.yaml  navsat.yaml  twist_mux.yaml  ukf_global.yaml  ukf_local.yaml
src/earendil_bot/description/: camera.xacro  imu.xacro  lidar.xacro  robot.gazebo  robot.urdf.xacro
src/earendil_bot/earendil_bot/: arduino_joy.py  base_exit.py  base_return.py  circle_drive.py  joy_teleop.py  mission_antenna.py  mission_crater.py  mission_lavatube.py  mission_nav.py  mission_start.py  pointcloud_ground_filter.py  scan_ground_filter.py  tank_teleop.py  tunnel_aruco_nav.py  waypoint_nav.py
src/earendil_bot/launch/: gazebo_model.launch.py  sim.launch.py
src/earendil_bot/world/: empty.sdf  environment.frag  environment.material  environment.stl  environment.vert  environment.world  mars.world
src/earendil_bot/world/meshes/: environment.stl
src/earendil_bot/world/meshes/NASA Mars Meshes/walkway_finish_adjacent/: model.sdf
src/earendil_bot/world/meshes/environment/: environment.mtl  model.config
